added cart page

--- a/amazon/a-index.html
+++ b/amazon/a-index.html
@@ -45,7 +45,7 @@
 <!-- cart -->
 <div class="nav-cart border">
     <i class="fa-solid fa-cart-shopping"></i>
-    Cart
+    <a href="cart.html"><button>Cart</button></a>
 </div>
     </div>
 
